--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -10,10 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "eslint": "^8.46.0",
+    "typescript": "^5.1.6",
     "vitest": "^0.34.1"
   },
   "dependencies": {
+    "@types/node": "^20.4.8",
     "@typescript-eslint/type-utils": "^6.2.1",
-    "utility-types": "^3.10.0"
+    "ts-node": "^10.9.1",
+    "utility-types": "^3.10.0",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
