--- a/Zod/package.json
+++ b/Zod/package.json
@@ -20,6 +20,6 @@
     "zod": "^3.21.4"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "We Santos",
+  "license": "MIT"
 }
